--- a/landingPage/style.css
+++ b/landingPage/style.css
@@ -11,7 +11,7 @@ body {
 
 
 h3 {
-	font-size: 20px;
+	font-size: 50px;
 	position: absolute:
 	transform: translate(-50%, -50%);
 	font-family: Akira Expanded;
@@ -26,56 +26,34 @@ h4 {
 	text-align: right;
 }
 
+.content {
+	font-family: CreatoDisplay-Bold;
+	font-size: 70px;
+	text-decoration: none;
+	color: white;
 
-.button1
-{
-	position: absolute;
-	top: 80%;
-	Left: 30%;
-	transform: translate(-50%,-50%);
-	width: 300px;
-	height: 150px;
-	text-align: center;
-	line-height: 60px;
-	color: #fff;
-	font-size: 50px;
+}
 
-	font-family: Helvetica;
-	font-weight: bold;
-	box-sizing: border-box;
-	background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
-	background-size: 400%;
-	border-radius: 30px;
+.content : hover {
+	color: black;
+	transform: scale(1.5);
+}
+
+a {
+	text-decoration: none;
+	color: white;
+	transition: 0.3s;
+}
+
+a:hover {
+	transform: scale(1.5);
 }
 
 
 
-.button2
-{
-	position: absolute;
-	top: 80%;
-	Left: 80%;
-	transform: translate(-50%,-50%);
-	width: 300px;
-	height: 150px;
-	text-align: center;
-	line-height: 60px;
-	color: #fff;
-	font-size: 50px;
-	
 
-	font-family: Helvetica;
-	font-weight: bold;
-	box-sizing: border-box;
-	background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
-	background-size: 400%;
-	border-radius: 30px;
-}
 
-a:hover
-{
-	animation: animate 8s linear infinite;
-}
+
 
 @keyframes animate 
 {
