--- a/landingPage/style.css
+++ b/landingPage/style.css
@@ -14,20 +14,22 @@ h3 {
 	font-size: 50px;
 	position: absolute:
 	transform: translate(-50%, -50%);
-	font-family: Akira Expanded;
+	font-family: Akira Bold;
+	src: url(Akira Bold.otf);
 	color: rgb(255,255,255);
 }
 
 h4 {
 	font-size: 50px;
-
-	font-family: Akira Expanded;
+	font-family: Akira Bold;
+	src: url(Akira Bold.otf);
 	color: rgb(255,255,255);
 	text-align: right;
 }
 
 .content {
 	font-family: CreatoDisplay-Bold;
+	src: url(CreatoDisplay-Bold.otf);
 	font-size: 70px;
 	text-decoration: none;
 	color: white;
