--- a/midterm/style.css
+++ b/midterm/style.css
@@ -79,6 +79,7 @@ h7 { /* WELCOME TO SEOUL */
 	font-size: 100px;
 	color: white;
 	text-decoration: underline;
+	background: url(https://youtu.be/3P1CnWI62Ik);
 
 }
 
@@ -111,28 +112,134 @@ h8 {
 	background-color: transparent;
 	border-radius: 0px;
 	transition: 0.3s;
+	margin-left: 100px;
+	margin-right: 100px;
+	margin-top: 200px;
+	margin-bottom: 200px;
+
+
 }
 
 
 .mainmap:hover{
-	transform:scale(1.3);
+	display: block;
+	width: 50%;
+	transform:scale(1.5);
 	z-index: 2;
+
 	
 }
 
-.onhover {
-	font-size: 20px;
-	color: black;
-
+h200 {
+	color:black;
+	transition: 0.3s;
 }
 
-.Bonhover {
+h200:hover {
+	color: blue;
+	text-decoration: blink;
+}
+
+.Bonhover:hover {
+	transform: scale(1.5);
+	z-index: 10;
+	color: blue;
+}
+
+
+/* map points on hover */
+a {
+	color: black;
+}
+.Bonhover { /* Banpo location */
 	position: absolute;
 	color:black;
 	top: 390px;
 	left: 300px;
+	transition: 0.2s;
 
 }
+
+.Bonhover:hover {
+	transform: scale(1.5);
+	z-index: 10;
+	color: blue;
+}
+ 
+.Gonhover { /* Gwanghwamun location */
+	position: absolute;
+	color: black;
+	top: 340px;
+	left: 230px;
+	transition: 0.2s;
+}
+
+.Gonhover:hover {
+	transform: scale(2.0);
+	z-index: 10;
+	color: blue;
+}
+
+.Honhover { /* Hongdae location */
+	position: absolute;
+	color:black;
+	top: 360px;
+	left: 200px;
+	transition: 0.2s;
+
+}
+.Honhover:hover {
+	transform: scale(2.0);
+	z-index: 10;
+	color: blue;
+}
+
+
+.Ionhover { /* Insadong location */
+	position: absolute;
+	color:black;
+	top: 320px;
+	left: 260px;
+	transition: 0.2s;
+}
+.Ionhover:hover {
+	transform: scale(2.0);
+	z-index: 10;
+	color: blue;
+}
+
+.Itonhover { /* Itaewon location */
+	position: absolute;
+	color:black;
+	top: 360px;
+	left: 300px;
+	transition: 0.2s;
+
+}
+.Itonhover:hover {
+	transform: scale(2.0);
+	z-index: 10;
+	color: blue;
+}
+
+.Jonhover { /* Jongno location */
+	position: absolute;
+	color:black;
+	top: 300px;
+	left: 260px;
+	transition: 0.2s;
+}
+.Jonhover:hover {
+	transform: scale(2.0);
+	z-index: 10;
+	color: blue;
+}
+
+/* map points on hover */
+
+
+
+
 
 .places {
 font-size: 100px;
@@ -298,6 +405,11 @@ h10 {
 
 }
 
+.images {
+	margin-left: 120px;
+
+}
+
 .places {
 	margin-top: 30px;
 	margin-bottom: 30px
@@ -309,26 +421,88 @@ h10 {
 	flex-direction: row;
 	justify-content: space-around;
 	flex-wrap:  nowrap;
-	margin-top: 50px;
+	margin-top: 100px;
 }
 
 .allphotos {
-	margin-left: 30px
 	height: 700px;
 	width: 470px;
+	margin-left: 100px;
+	margin-top: 100px;
+	margin-bottom: 20px;
 }
 
-
-.alphotos {
-	margin-left: 30px
-	height: 700px;
-	width: 470px;
-}
 
 .justthisphoto {
 	height: 470px;
 	width: 700px;
+	margin-left: 100px;
+	margin-top: 100px;
 }
+
+
+.words {
+	font-family: CreatoDisplay-Regular;
+	src: url(CreatoDisplay-Regular.otf);
+	font-size: 25px;
+	color: white;
+	margin-left: 50px;
+	margin-top: 100px;
+	margin-right: 100px;
+}
+/* some attempts on making a slider for photos 
+.images {
+	 display: flex;
+	 width: 100%;
+}
+
+.images img {
+	 height: 100%;
+	 width: 100%;
+	 transition: all 0.15s ease ;
+} 
+
+.images input {
+ 	display: none; 
+
+}
+
+.dots {
+	display: flex;
+	justify-content: center;
+	margin: 5px;
+
+}
+
+.dots label {
+	height: 20px;
+	width: 20px;
+	border-radius: 50%;
+	border: solid #fff 3px;
+	cursor: pointer;
+	transition: all 0.15s ease;
+	margin: 5px;
+}
+
+.dots label:hover {background: #fff;}
+
+#img1:checked ~ .m1{
+	margin-left: 0;
+	}
+
+#img2:checked ~ .m2{
+	margin-left: -100%;
+	}
+
+#img3:checked ~ .m3{
+	margin-left: -200%;
+	}
+
+#img4:checked ~ .m4{
+	margin-left: -300%;
+	}
+*/
+
 p10 {
 	font-family: CreatoDisplay-Light;
 	src: url(CreatoDisplay-Light.otf)
@@ -344,14 +518,7 @@ p11 {
 	color: white;
 }
 
-.words {
-	font-family: CreatoDisplay-Regular;
-	src: url(CreatoDisplay-Regular.otf);
-	font-size: 25px;
-	color: white;
-	margin-left: 100px;
-	margin-right: 100px;
-}
+
 /* Banpo */
 
 
@@ -368,5 +535,6 @@ p100 {
 	font-family: CreatoDisplay-Medium;
 	src: url(CreatoDisplay-Medium.otf);
 }
+
 
 
