--- a/landingPage/style.css
+++ b/landingPage/style.css
@@ -1,4 +1,3 @@
-
 body {
 	width: 100%;
 	height: 100%;
@@ -35,8 +34,10 @@ h4 {
 }
 
 .content:hover {
-	transform: scale(1.5);
-	transition-duration: 0.3s
+	color: black;
+	margin-left: 100px;
+	transform: scale(1.1);
+	transition-duration: 0.2s
 }
 
 a {
