--- a/final/final.css
+++ b/final/final.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: "CreatoDisplay-MediumItalic";
-    src: url("CreatoDisplay-MediumItalic.otf");
+    src: url(../final/CreatoDisplay-MediumItalic.otf");
     background-color: aquamarine; // #fddb27ff
     width: 100%;
     height: 100vh;
@@ -26,7 +26,7 @@ header{
 }
 footer {
     font-family: "CreatoDisplay-MediumItalic";
-    src: url("CreatoDisplay-MediumItalic.otf");
+    src: url("../final/CreatoDisplay-MediumItalic.otf");
     font-size: 15px;
 
 }
@@ -44,7 +44,7 @@ footer {
 }
 h1 {
     font-family: "CreatoDisplay-MediumItalic";
-    src: url("CreatoDisplay-MediumItalic.otf");
+    src: url("../final/CreatoDisplay-MediumItalic.otf");
     font-size: 150px;
     color: #000000;
     margin-top: 50px;
@@ -52,7 +52,7 @@ h1 {
 
 h2 {
     font-family: "CreatoDisplay-MediumItalic";
-    src: url("CreatoDisplay-MediumItalic.otf");
+    src: url("../final/CreatoDisplay-MediumItalic.otf");
     margin-left: 100px;
     margin-bottom: 80px;
     font-size: 70px;
@@ -63,7 +63,7 @@ h2 {
 
 h3{
     font-family: "CreatoDisplay-MediumItalic";
-    src: url("CreatoDisplay-MediumItalic.otf");
+    src: url("../final/CreatoDisplay-MediumItalic.otf");
     font-size: 15px;
     padding: 50px;
     color: #000000;
