--- a/landingPage/style.css
+++ b/landingPage/style.css
@@ -12,21 +12,21 @@ body {
 h3 {
 	font-size: 35px;
 	font-family: 'CreatoDisplay-Light';
-	src: url('../../creato-display/CreatoDisplay-Light.otf') format('opentype');
+	src: url('../CreatoDisplay-Light.otf') format('opentype');
 	color: rgb(255,255,255);
 }
 
 h4 {
 	font-size: 35px;
 	font-family: 'CreatoDisplay-Light';
-	src: url('../../creato-display/CreatoDisplay-Light.otf') format('opentype');
+	src: url('../CreatoDisplay-Light.otf') format('opentype');
 	color: rgb(255,255,255);
 	text-align: right;
 }
 
 .content {
 	font-family: 'CreatoDisplay-Bold';
-	src: url('../../creato-display/CreatoDisplay-Bold.otf') format('opentype');
+	src: url('../CreatoDisplay-Bold.otf') format('opentype');
 	font-size: 50px;
 	text-decoration: none;
 	color: white;
