--- a/landingPage/style.css
+++ b/landingPage/style.css
@@ -11,21 +11,21 @@ body {
 
 h3 {
 	font-size: 35px;
-	font-family: 'CreatoDisplay-Light';
+	font-family: 'CreatoDisplay';
 	src: url('../CreatoDisplay-Light.otf') format('opentype');
 	color: rgb(255,255,255);
 }
 
 h4 {
 	font-size: 35px;
-	font-family: 'CreatoDisplay-Light';
+	font-family: 'CreatoDisplay';
 	src: url('../CreatoDisplay-Light.otf') format('opentype');
 	color: rgb(255,255,255);
 	text-align: right;
 }
 
 .content {
-	font-family: 'CreatoDisplay-Bold';
+	font-family: 'CreatoDisplay';
 	src: url('../CreatoDisplay-Bold.otf') format('opentype');
 	font-size: 50px;
 	text-decoration: none;
